# invoice_gen

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_desktop_app.py  setup.py
src/: database.py  desktop_app.py  invoice_generator.py  pdf_creator.py
