[project]
name = "invoice-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "logging>=0.4.9.6",
    "pytest-mock==3.10.0",
    "pytest==7.3.1",
    "reportlab==4.0.7",
    "sqlalchemy==2.0.15",
    "typing==3.7.4.3",
    "python-dotenv==1.0.0",
    "pyqt6==6.5.1",
    "pyqt6-qt6==6.5.1",
    "pyqt6-sip==13.4.1",
]
